# poc-crew-ai

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/socle-commun/: crew.py  main.py
src/socle-commun/config/: agents.yaml  github_config.py  tasks.yaml
src/socle-commun/tools/: github_tools.py
src/socle_commun/: __init__.py  crew.py  main.py
src/socle_commun/config/: agents.yaml  tasks.yaml
src/socle_commun/tools/: __init__.py
