[tool.poetry]
name = "socle-commun"
version = "0.1.0"
description = "GitHub organization management using crewAI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "socle_commun", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = ">=0.119.0,<1.0.0"}
PyGithub = ">=2.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
run = "socle_commun.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"
